# opendeck-vsd-n1

./: 40-opendeck-akp05.rules  40-opendeck-vsd-n1.rules  CHANGELOG.md  Cargo.toml  Dockerfile.builder  README.md  build-with-docker.sh  justfile  manifest.json
.github/workflows/: package.yml
scripts/: build-in-docker.sh
src/: device.rs  inputs.rs  main.rs  mappings.rs  watcher.rs
